resources/02_rhsso-prod/01_postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: postgres
  name: postgres
  namespace: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - env:
        - name: POSTGRESQL_DATABASE
          value: pgsql-rhsso-prod
        - name: POSTGRESQL_USER
          value: pgsql-admin
        - name: POSTGRESQL_PASSWORD
          value: pgsql-password
        - name: POSTGRESQL_ADMIN_PASSWORD
          value: pgsql-password
        - name: PGDATA
          value: /temp/data
        image: registry.redhat.io/rhel8/postgresql-12:1-150.1698060555 
        imagePullPolicy: Always
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          limits:
            cpu: 60m
            memory: 512Mi
          requests:
            cpu: 30m
            memory: 128Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: postgresql
  name: postgres
  namespace: postgres
spec:
  ports:
  - name: http
    port: 5432
    protocol: TCP
  selector:
    app: postgres
#  type: NodePort
