resources/02_rhsso-prod/04_sso_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  name: sso
  namespace: rhsso-prod
  labels:
    app: keycloak
spec:
  to:
    kind: Service
    name: keycloak
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: keycloak
